# GLUS

./: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD-PARTY.md
.github/: FUNDING.yml
Android/jni/: Android.mk
EnvironmentBRDF/: .cproject  .project
EnvironmentBRDF/shader/: environmentBRDF.comp.glsl
EnvironmentBRDF/src/: EnvironmentBRDF.c
GLSL2Header/: .cproject  .project
GLSL2Header/src/: GLSL2Header.c
GLUS/: .gitignore  CMakeLists.txt  GLUS.pc.in
Panorama2CubeMap/: .cproject  .project
Panorama2CubeMap/src/: Panorama2CubeMap.c
PreFilterCubeMap/: .cproject  .project
PreFilterCubeMap/shader/: prefilter.comp.glsl
PreFilterCubeMap/src/: PreFilterCubeMap.c
TGA2Header/: .cproject  .project
TGA2Header/src/: TGA2Header.c
docs/: Doxyfile  _g_l_2glus_8h.html  _g_l_2glus_8h_source.html  _v_g_2glus_8h.html  _v_g_2glus_8h_source.html  annotated.html  classes.html  dir_09964bbd5088352eddd39edb108afd0b.html  dir_41e1e965409129d8c2dccf4415fd5354.html  dir_4435b99f45373ca3baf64d304ce33d04.html  dir_4f99189f4de289b6bd00537165be68aa.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_dd31ea90f7ceee77a69ea6f2e209d868.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_defs_e.html  globals_defs_g.html  globals_defs_w.html  globals_e.html  globals_func.html  globals_func_g.html  globals_g.html  globals_type.html  globals_w.html  glus2_8h.html  glus2_8h_source.html  glus31_8h.html  glus31_8h_source.html  glus3_8h.html  glus3_8h_source.html  glus__axisalignedbox_8c.html  glus__axisalignedbox_8h.html  glus__axisalignedbox_8h_source.html  glus__clib_8h.html  glus__clib_8h_source.html  glus__complex_8c.html  glus__complex_8h.html  (+182 more)
shader/: glus_gltf_pbr.frag.glsl  glus_gltf_pbr.vert.glsl  glus_gltf_pbr_morph.vert.glsl  glus_gltf_pbr_skinned.vert.glsl  glus_ibl.vert.glsl  glus_ibl_background.frag.glsl  glus_ibl_brdf_lut.frag.glsl  glus_ibl_diffuse.frag.glsl  glus_ibl_specular.frag.glsl
src/: glus_animation.c  glus_axisalignedbox.c  glus_complex.c  glus_egl_es.c  glus_extension.c  glus_extension_vg.c  glus_file.c  glus_file_binary.c  glus_file_text.c  glus_fourier.c  glus_gltf.c  glus_ibl.c  glus_image.c  glus_image_hdr.c  glus_image_pkm.c  glus_image_tga.c  glus_intersect.c  glus_line.c  glus_line_wavefront.c  glus_log.c  glus_log_vg.c  glus_math.c  glus_matrix.c  glus_matrix_planar.c  glus_matrix_viewprojection.c  glus_memory.c  glus_memory_nodm.c  glus_orientedbox.c  glus_os_android_es.c  glus_os_linux_es.c  glus_os_linux_imx6_es.c  glus_os_linux_raspberrypi_es.c  glus_os_windows_es.c  glus_padding.c  glus_perlin.c  glus_plane.c  glus_point.c  glus_profile.c  glus_program.c  glus_program_es.c  (+22 more)
src/GL/: glus.h
src/GLES2/: glus2.h
src/GLES3/: glus3.h  glus31.h
src/GLUS/: glus_animation.h  glus_axisalignedbox.h  glus_clib.h  glus_complex.h  glus_define.h  glus_define_color.h  glus_define_color_channel.h  glus_define_color_channel_es.h  glus_define_color_channel_vg.h  glus_define_color_vg.h  glus_define_shader.h  glus_define_shader_es.h  glus_define_shader_es31.h  glus_define_uint.h  glus_define_ushort.h  glus_egl.h  glus_extension.h  glus_file.h  glus_file_binary.h  glus_file_text.h  glus_fourier.h  glus_function.h  glus_glfw_es.h  glus_gltf.h  glus_ibl.h  glus_image.h  glus_image_hdr.h  glus_image_pkm.h  glus_image_tga.h  glus_intersect.h  glus_line.h  glus_line_wavefront.h  glus_log.h  glus_math.h  glus_matrix.h  glus_matrix_planar.h  glus_matrix_viewprojection.h  glus_memory.h  glus_orientedbox.h  glus_padding.h  (+25 more)
src/VG/: glus.h
